--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,17 @@
-/*============================== GOOGLE FONTS ==============================*/
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600,700&display=swap");
 
 /*=============== Varibles ===============*/
 :root {
-  /********** Colors **********/
   --first-color: #ffb3b2;
   --white-color: #fff;
   --dark-color: #121212;
   --white-color-text: #fff8f8;
-
-  /********** Fonts **********/
-  --body-font: "Poppins", sans-serif;
+  --body-font: "Roboto", sans-serif;
 
   --bigger-font-size: 2.25rem;
   --big-font-size: 1.5rem;
   --normal-font-size: 0.813rem;
+  --z-index: 100;
 }
 
 @media screen and (min-width: 768px) {
@@ -24,17 +21,10 @@
     --normal-font-size: 1rem;
   }
 }
-
-/* Base Css */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+*,
 ::before,
 ::after {
   box-sizing: border-box;
-  text-decoration: none;
   margin: 0;
   padding: 0;
 }
@@ -57,88 +47,158 @@ ul {
   margin: 0;
   padding: 0;
 }
-i {
-  margin-right: 10px;
-}
+
 ul {
   list-style: none;
 }
 
 a {
   text-decoration: none;
-  color: #fff;
   cursor: pointer;
-  align-items: flex-end;
 }
 
 img {
   max-width: 100%;
   height: auto;
 }
-header {
+#header {
   position: absolute;
   width: 100%;
 }
-/* Navbar - Menu */
+
 .nav {
   height: 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px;
+  padding: 0 30px;
 }
 
-/* Content */
+.nav__logo {
+  font-size: var(--big-font-size);
+  color: var(--dark-color);
+  font-weight: 600;
+  letter-spacing: -1px;
+}
+
+.nav__logo span {
+  color: var(--white-color);
+}
+
+.nav__toggle {
+  display: inline;
+  cursor: pointer;
+}
+
+.nav__toggle i {
+  font-size: 36px;
+}
+
+@media screen and (max-width: 768px) {
+  .nav__menu {
+    position: fixed;
+    top: -100%; /*  3rem */
+    left: 0;
+    background-color: var(--white-color);
+    border-radius: 36px;
+    width: calc(100% - 3rem);
+    height: auto;
+    margin: 0.5rem 1.5rem;
+    padding: 2rem 1rem;
+    z-index: var(--z-index);
+    font-weight: bold;
+    text-align: center;
+    transition: all 0.5s;
+  }
+}
+
+.nav__item:not(:last-of-type) {
+  margin-bottom: 1.5rem;
+}
+.nav__link {
+  color: #000;
+}
+.nav__link:hover {
+  color: #2d2d2f;
+}
+.nav__link.active {
+  background-color: var(--first-color);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  color: var(--white-color);
+  font-weight: bold;
+}
+.show-menu {
+  top: 3rem;
+}
 .home {
-  background: url(../img/background.jpg) no-repeat center center/cover;
+  background: url("../img/background.jpg") no-repeat center center / cover;
   height: 100vh;
   min-height: 500px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
   padding: 5rem;
 }
-.home-title {
-  font-size: 50px;
-  color: #fff8f8;
+.home__title {
+  color: var(--white-color-text);
+  font-size: var(--bigger-font-size);
+  text-align: center;
 }
-.nav-logo {
-  color: #121212;
-  font-size: 30px;
-  font-weight: bolder;
+.home__play {
+  text-align: center;
 }
-span {
-  color: #fff8f8;
+.home__play-text {
+  margin: 1.5rem;
 }
-#nav-menu {
-  color: #121212;
-  padding-right: 20px;
+.home__play-icon i {
+  background-color: var(--first-color);
+  color: var(--white-color);
+  border-radius: 50%;
+  transition: all 0.5s;
 }
-.bx-play-circle {
-  font-size: 50px;
-  color: #fff;
+.home__play-icon i:hover {
+  background-color: var(--dark-color);
 }
-.home-play {
-  font-size: 25px;
-  color: black;
-}
-p {
-  color: black;
-  font-family: inherit;
-}
-/* Social Media */
-
 .social-media {
   position: fixed;
-  right: 3%;
+  right: 10px;
   bottom: 0;
   background-color: var(--first-color);
   padding: 0.75rem 1.5rem 0.35rem;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  font-size: 25px;
 }
-
-/* Responsive */
+.social-media i {
+  color: var(--white-color);
+  font-size: 30px;
+  margin: 0 7px;
+}
+.social-media i:hover {
+  color: var(--dark-color);
+}
+/* ----------------- RESPONSIVE ------------------ */
 @media screen and (min-width: 768px) {
+  .nav__list {
+    display: flex;
+    align-items: center;
+  }
+  .nav__item:not(:last-of-type) {
+    margin-bottom: 0;
+    margin-right: 1rem;
+  }
+  .home__play {
+    display: flex;
+    align-items: center;
+  }
+  .nav__toggle {
+    display: none;
+  }
+  .home {
+    flex-direction: row;
+  }
+  .home__title {
+    text-align: left;
+  }
 }
